# api/openapi.yaml
@@ -10,7 +10,7 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.11
 servers:
-  - url: http://localhost:9000
+  - url: http://localhost:8080
   # - url: https://api.kinderleap.com
 tags:
   - name: auth
@@ -328,6 +328,39 @@ paths:
         '406':
           description: Invalid Input
       x-swagger-router-controller: Admin
+    get:
+      tags:
+        - admin
+      summary: ดูสมาชิก
+      operationId: getAdminById
+      parameters:
+        - name: id
+          in: path
+          description: user Id
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status: 
+                    type: integer
+                    format: int32
+                    example: 200
+                  data:
+                    $ref: '#/components/schemas/Admin'
+        '405':
+          description: Method not allowed
+        '406':
+          description: Invalid Input
+      x-swagger-router-controller: Admin
   /admin/password:
     put:
       tags:
@@ -342,6 +375,40 @@ paths:
       responses: 
         '200':
           description: Successful operation
+        '405':
+          description: Method not allowed
+        '406':
+          description: Invalid Input
+      x-swagger-router-controller: Admin
+  /admin/email/{email}:
+     get:
+      tags:
+        - admin
+      summary: ดูสมาชิก
+      operationId: getAdminByEmail
+      parameters:
+        - name: email
+          in: path
+          description: user Email
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status: 
+                    type: integer
+                    format: int32
+                    example: 200
+                  data:
+                    $ref: '#/components/schemas/Admin'
         '405':
           description: Method not allowed
         '406':
@@ -494,6 +561,35 @@ paths:
       operationId: getVoteByImage
       parameters:
         - name: image_id
+          in: path
+          required : true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                  data:
+                    items:
+                      $ref: '#/components/schemas/Vote'
+        '405':
+          description: Method not allowed
+        '406':
+          description: Invalid Input
+      x-swagger-router-controller: Vote
+  /vote/user/{user_id}:
+    get:
+      tags:
+        - vote
+      operationId: getVoteByUserId
+      parameters:
+        - name: user_id
           in: path
           required : true
           schema:
